[tool.poetry]
name = "TorchMiner"
version = "0.2.0"
description = "Run Torch With A Simple Miner"
authors = ["InEase <inease28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.5.0"
tensorboardX = "^2.4.1"
torch = "^1.10.0"
tqdm = "^4.62.3"
ipython = "^7.29.0"
google-api-python-client = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
