[tool.poetry]
name = "ExpMiner"
version = "1.0.0"
description = "Run and Discover your Experiments In A Paradigm."
authors = ["InEase <inease28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
